Fixed issue with scrollbar appearing on desktop hover tooltips

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,7 +39,6 @@ body {
 .d3-tip {
 	max-width: 350px;
 	max-height: 300px;
-	overflow-y: auto;
 }
 
 .btn-group {
